drlm (2.4.3) stable release; urgency=high
  * New! RedHat 9 client & server support
  * Bugfix database creation
  * Bugfix RedHat services configuration variable
  
 -- Pau Roura <pau@brainupdaters.net>  Thu, 21 Apr 2022 00:00:00 +0100

drlm (2.4.2) stable release; urgency=high
  * NEW! DRLM Proxy added
  * NEW! Ubuntu 22 client & server support
  * NEW! New Hold backup feature
  * Fixed listclient filtered by client
  * Fixed RHEL 8.5 ppc64le instclient dependency (issue #188)
  * drlm-api improvements
  * Log improvements
  * Bugfix importing old backups
  * Bugfix non case-sensitive bash_completion 
  * Bugfix in upgrade drlm
  * Bugfix icreasing partition size

 -- Pau Roura <pau@brainupdaters.net>  Thu, 14 Apr 2022 00:00:00 +0100

drlm (2.4.1) stable release; urgency=high
  * Fixed --skip-alias parameter in which command
  * Fixed several typo errors 
  * Fixed cat, grep and xargs bugs
  * Parameterizable qemu-nbd options
  * Fixed udev hang errors

 -- Pau Roura <pau@brainupdaters.net>  Tue, 22 Feb 2022 00:00:00 +0100

drlm (2.4.0) stable release; urgency=high
  * Multiple configuration supported
  * Incremental backups supported
  * ISO recover image supported 
  * PowerPC architecture supported
  * ReaR mkbackuponly and ReaR restoreonly supported
  * Configurable DRLM parameters for each client or backup
  * Added drlm-api systemd service
  * HTTPS GUI base to add future functionalities
  * Security token added for comunitacions between DRLM server and client
  * Improved and simplified client configurations
  * Loop devices are repaced by NBD (network block devices)
  * DR file format was changed from RAW to QCOW2 
  * Improved instclient configuration workflow
  * List Unscheduled clients bug fixed
  * Removed unsupported SysVinit service management
  * SSH_PORT variable independent of SSH_OPTS
  * RSYNC protocol supported
  * Improved DRLM installation
  * Added drlm-tftpd systemd service
  * Added drlm-rsyncd systemd service