@@ -3,7 +3,12 @@ set -e
 
 case "$1" in
   install)
-    # do something
+    # check host name is not localhost
+    currhostname="$(/usr/bin/hostname -s)"
+    if [ "$currhostname" = "localhost" ]; then
+      echo "Its important that DRLM servers have a valid hostname. Please change \"localhost\" host name. "
+      exit 1
+    fi
     ;;
 
   upgrade)
