@@ -455,38 +455,38 @@ URL_REAR_SUSE15_PPC64="$URL_REAR_BASE/Rear/SLE_15/ppc64le/rear-2.6-1.ppc64le.rpm
 REAR_DEP_DEBIAN6="binutils attr syslinux ethtool lsb-release genisoimage iproute iputils-ping parted openssl gawk mingetty sudo curl nfs-common"
 REAR_DEP_DEBIAN7="binutils attr syslinux ethtool lsb-release genisoimage iproute iputils-ping parted openssl gawk mingetty sudo curl nfs-common"
 REAR_DEP_DEBIAN8="binutils attr ethtool lsb-release dosfstools parted openssl gawk sudo curl nfs-common bc rsync genisoimage isolinux"
-REAR_DEP_DEBIAN9="binutils attr ethtool lsb-release dosfstools parted openssl gawk sudo curl nfs-common bc net-tools less rsync genisoimage isolinux psmisc"
-REAR_DEP_DEBIAN10="binutils attr ethtool lsb-release dosfstools parted openssl gawk sudo curl nfs-common bc net-tools wget rsync genisoimage isolinux psmisc"
-REAR_DEP_DEBIAN11="binutils attr ethtool lsb-release dosfstools parted openssl gawk sudo curl nfs-common bc net-tools wget rsync genisoimage isolinux psmisc file"
+REAR_DEP_DEBIAN9="binutils attr ethtool lsb-release dosfstools parted openssl gawk sudo curl nfs-common bc net-tools less rsync genisoimage isolinux psmisc kbd file isc-dhcp-client"
+REAR_DEP_DEBIAN10="binutils attr ethtool lsb-release dosfstools parted openssl gawk sudo curl nfs-common bc net-tools wget rsync genisoimage isolinux psmisc kbd file isc-dhcp-client"
+REAR_DEP_DEBIAN11="binutils attr ethtool lsb-release dosfstools parted openssl gawk sudo curl nfs-common bc net-tools wget rsync genisoimage isolinux psmisc kbd file isc-dhcp-client"
 
 # UBUNTU Dependencies
 REAR_DEP_UBUNTU12="syslinux ethtool lsb-release genisoimage iproute iputils-ping binutils parted openssl gawk attr mingetty sudo curl nfs-common"
 REAR_DEP_UBUNTU14="binutils attr nfs-common"
 REAR_DEP_UBUNTU16="binutils attr nfs-common dosfstools parted bc rsync genisoimage isolinux"
 REAR_DEP_UBUNTU17="binutils attr nfs-common"
-REAR_DEP_UBUNTU18="binutils attr nfs-common rsync genisoimage isolinux psmisc"
-REAR_DEP_UBUNTU19="binutils attr nfs-common"
-REAR_DEP_UBUNTU20="binutils attr nfs-common net-tools rsync genisoimage isolinux psmisc"
-REAR_DEP_UBUNTU22="binutils attr nfs-common net-tools rsync genisoimage isolinux psmisc curl ethtool gawk libsigsegv2"
+REAR_DEP_UBUNTU18="binutils attr nfs-common rsync genisoimage isolinux psmisc kbd file isc-dhcp-client"
+REAR_DEP_UBUNTU19="binutils attr nfs-common kbd file isc-dhcp-client"
+REAR_DEP_UBUNTU20="binutils attr nfs-common net-tools rsync genisoimage isolinux psmisc kbd file isc-dhcp-client"
+REAR_DEP_UBUNTU22="binutils attr nfs-common net-tools rsync genisoimage isolinux psmisc curl ethtool gawk libsigsegv2 file kbd file isc-dhcp-client"
 
 # CENTOS/REDHAT Dependencies
 REAR_DEP_REDHAT5_32="mkisofs mingetty syslinux nfs-utils portmap wget curl parted"
 REAR_DEP_REDHAT5_64="mkisofs mingetty syslinux nfs-utils portmap wget curl parted"
 REAR_DEP_REDHAT5_PPC64="mkisofs mingetty syslinux nfs-utils portmap wget curl parted"
-REAR_DEP_REDHAT6_32="genisoimage mtools syslinux syslinux-nonlinux nfs-utils rpcbind wget parted bc rsync"
-REAR_DEP_REDHAT6_64="genisoimage mtools syslinux syslinux-nonlinux nfs-utils rpcbind wget parted bc rsync"
-REAR_DEP_REDHAT6_PPC64="genisoimage mtools syslinux syslinux-nonlinux nfs-utils rpcbind wget parted bc rsync"
-REAR_DEP_REDHAT7_64="attr genisoimage libusal mtools syslinux nfs-utils wget bc net-tools rsync psmisc" 
-REAR_DEP_REDHAT7_PPC64="attr genisoimage libusal mtools syslinux-tftpboot nfs-utils wget bc net-tools rsync psmisc" 
-REAR_DEP_REDHAT8_64="attr genisoimage libusal mtools syslinux nfs-utils wget bc net-tools rsync psmisc"
-REAR_DEP_REDHAT8_PPC64="attr genisoimage libusal mtools syslinux-tftpboot nfs-utils wget bc net-tools rsync psmisc"
-REAR_DEP_REDHAT9_64="attr genisoimage mtools syslinux nfs-utils wget bc net-tools rsync psmisc"
-REAR_DEP_REDHAT9_PPC64="attr genisoimage mtools syslinux-tftpboot nfs-utils wget bc net-tools rsync psmisc"
+REAR_DEP_REDHAT6_32="genisoimage mtools syslinux syslinux-nonlinux nfs-utils rpcbind wget parted bc rsync kbd file dhclient"
+REAR_DEP_REDHAT6_64="genisoimage mtools syslinux syslinux-nonlinux nfs-utils rpcbind wget parted bc rsync kbd file dhclient"
+REAR_DEP_REDHAT6_PPC64="genisoimage mtools syslinux syslinux-nonlinux nfs-utils rpcbind wget parted bc rsync kbd file dhclient"
+REAR_DEP_REDHAT7_64="attr genisoimage libusal mtools syslinux nfs-utils wget bc net-tools rsync psmisc kbd file dhclient" 
+REAR_DEP_REDHAT7_PPC64="attr genisoimage libusal mtools syslinux-tftpboot nfs-utils wget bc net-tools rsync psmisc kbd file dhclient" 
+REAR_DEP_REDHAT8_64="attr genisoimage libusal mtools syslinux nfs-utils wget bc net-tools rsync psmisc kbd file dhcp-client"
+REAR_DEP_REDHAT8_PPC64="attr genisoimage libusal mtools syslinux-tftpboot nfs-utils wget bc net-tools rsync psmisc kbd file dhcp-client"
+REAR_DEP_REDHAT9_64="attr genisoimage mtools syslinux nfs-utils wget bc net-tools rsync psmisc kbd file dhcp-client"
+REAR_DEP_REDHAT9_PPC64="attr genisoimage mtools syslinux-tftpboot nfs-utils wget bc net-tools rsync psmisc kbd file dhcp-client"
 
 # SUSE Dependencies
-REAR_DEP_SUSE11="net-tools"
-REAR_DEP_SUSE12="net-tools"
-REAR_DEP_SUSE15="net-tools"
+REAR_DEP_SUSE11="net-tools kbd file dhcp-client"
+REAR_DEP_SUSE12="net-tools kbd file dhcp-client"
+REAR_DEP_SUSE15="net-tools kbd file dhcp-client"
 
 ############### ----- REAR SERVICES
 #
