@@ -8,7 +8,7 @@
 #         (Configuration examples in /usr/share/drlm/conf/samples/)           #
 ###############################################################################
 
-# DRLM v2.4.3
+# DRLM v2.4.4
 #
 
 # DRLM automatically generates a ReaR configuration file in function of three
