@@ -6,7 +6,7 @@
 # for more information.                                                       #
 ###############################################################################
 
-# DRLM v2.4.3
+# DRLM v2.4.4
 #
 
 # In client.drlm.cfg config file can be set DRLM client specific configurations
