@@ -486,6 +486,11 @@ function tunning_rear () {
   if [ -f "/usr/share/rear/restore/default/500_selinux_autorelabel.sh" ]; then
     $SUDO sed -i '/^touch \$TARGET_FS_ROOT\/\.autorelabel/i rm -rf \$TARGET_FS_ROOT\/\.autorelabel' /usr/share/rear/restore/default/500_selinux_autorelabel.sh
   fi
+
+  # remove rear cron file
+  if [ -f "/etc/cron.d/rear" ]; then
+    $SUDO rm -rf /etc/cron.d/rear
+  fi
 }
 
 function ssh_tunning_rear () {
