@@ -36,7 +36,7 @@
           var formData = {
             'username'  : $('input[id=inputUser]').val(),
             'password'  : $('input[id=inputPassword]').val(),
-            'version'   : '2.4.3',
+            'version'   : '2.4.4',
             'platform'  : 'web'
           };
 
